removed topology and groups (won't need to typeset notes for them), updated algebraic topology and multivariable analysis

--- a/algebraic topology/algebraic topology math0023.tex
+++ b/algebraic topology/algebraic topology math0023.tex
@@ -208,7 +208,7 @@ We will soon see that this theorem generalises if \[S^n=\Delta^{n+1}\] then \[H_
 
 If $X=(V_X,\mathcal{S}_X)$, we have defined a chain complex \[C_*(X)=(C_r(X),\partial_r)\]
 
-Given a chain complex \[C_*(C_r,\partial_r)_{r\geq0}\] we define its \emph{homology} $H_*(C_*)$ by \[placeholder space\]
+Given a chain complex \[C_*(C_r,\partial_r)_{r\geq0}\] we define its \emph{homology} $H_*(C_*)$ by \[H_k(C_*)=\ker(\partial_k)/\text{im}(\partial_{k+1})\]
 
 If $X=(V_X,\mathcal{S}_X)$ is a simplicial complex, we define \[H_k(X,\mathbb{F})=H_k(C_*(X;\mathbb{F}))\]
 
