fixed typos in the multivariable analysis notes

--- a/multivariable-analysis/multivariable-analysis.tex
+++ b/multivariable-analysis/multivariable-analysis.tex
@@ -48,15 +48,15 @@ Hence we can represent $x\in\mathbb{R}^n$ as \[x=\sum_{i=1}^n x^i e_i\]
 		\item $|x|\geq0,\,|x|=0\iff x=0$
 		\item $|x\cdot y|\leq|x||y|$ \hfill (Cauchy-Schwarz inequality)
 		\item $|x+y|\leq|x|+|y|$ \hfill (Triangle inequality)
-		\item $|a\cdot x|=|a||x|$ \hfill (for $a\in\mathbb{R})$
+		\item $|a\cdot x|=|a|\cdot|x|$ \hfill (for $a\in\mathbb{R})$
 		\item $x\cdot y=y\cdot x$
 	\end{enumerate}
 \end{proposition}
 
 We may also write $x\cdot y=\langle x,y \rangle$ as the inner product is a bilinear form. Recall the properties of a bilinear form which are
 \begin{enumerate}
-	\item $\langle x+1+x_2,y\rangle=\langle x_1,y\rangle+\langle x_2,y\rangle$
-	\item $\langle a\cdot x,y\rangle = a\langle x,y\rangle$
+	\item $\langle x_1+x_2,y\rangle=\langle x_1,y\rangle+\langle x_2,y\rangle$
+	\item $\langle ax,y\rangle = a\langle x,y\rangle$
 \end{enumerate}
 
 Also note that \[\langle x,x\rangle = |x|^2\]
@@ -67,7 +67,7 @@ Recall that a mapping $T:\mathbb{R}^n\rightarrow\mathbb{R}^m$ is said to be \emp
 on the right hand side.
 
 \noindent Recall that we can recover $M$, the matrix representation of a linear mapping $T$ by applying $T$ to each of the standard basis. So if
-\[T(e_j)=a_{ij}e_1+a_{2j}e_2+\ldots+a_{mj}e_m\]
+\[T(e_j)=a_{1j}e_1+a_{2j}e_2+\ldots+a_{mj}e_m\]
 then
 \begin{eqnarray*}
 	M&=&(a_{ij}) \\
@@ -91,7 +91,7 @@ If $f:\mathbb{R}^n\rightarrow\mathbb{R}^m$ then we have \[f=(f^1,f^2,\ldots,f^m)
 and we call each of these $f^i$'s the components of $f$.
 
 \noindent Now we define a function $\pi^i:\mathbb{R}^m\rightarrow\mathbb{R}$ given by $\pi^i(y)=y^i$, so that
-\[\pi^i(y^1,y^2,\ldots,y^m)=y^i\] and we call this the \emph{projection in the $i^{\text{th}}$ direction} (\emph{or the projection function}). This function is a linear transformation.
+\[\pi^i(y^1,y^2,\ldots,y^m)=y^i\] and we call this the \emph{projection in the $i^{\text{th}}$ direction} (or the \emph{projection function}). This function is a linear transformation.
 
 \begin{center}
 \begin{tikzcd}[row sep=huge, column sep=large]
@@ -104,13 +104,15 @@ and we call each of these $f^i$'s the components of $f$.
 Sometimes instead of $\mathbb{R}^n$ we may define $f$ on a subset of $A\subset\mathbb{R}^n$, usually where $A$ is open, i.e., sometimes we have
 $f:A\rightarrow\mathbb{R}^m$.
 
-\subsection{Limits}
+\subsection{Limits and continuity}
 \begin{definition}
 	Let $a\in\mathbb{R}^n, \,b\in\mathbb{R}^m$. We write $\lim\limits_{x\to a} f(x)=b$ to mean
 	\[\forall\epsilon>0, \,\exists\delta>0\text{ such that } 0<|x-a|<\delta\implies|f(x)-b|<\epsilon\]
 \end{definition}
 
-We say $f$ is continuous on a set $A$ us $f$ is continuous at $a$, for all $a\in A$.
+\noindent We say $f$ is continuous at $a$ if and only if \[\lim\limits_{x\to a}f(x)= f(a)\]
+
+\noindent $f$ is said to be continuous on a set $A$ if $f$ is continuous at $a$, for all $a\in A$.
 
 \begin{theorem}[Combination theorem]
 	Suppose that \[\lim\limits_{x\to a} f(x)=b\text{ and }\lim\limits_{x\to a} g(x)=c\] then,
@@ -155,12 +157,12 @@ Now note that a linear transformation $T:\mathbb{R}^n\rightarrow\mathbb{R}^m$ is
 \end{proof}
 
 Using this lemma we can prove $T$ to be continuous at $y\in\mathbb{R}^n$ as follows,
-\[T(x)-T(y)|=|T(x-y)|\leq M|x-y|\] Given $\epsilon>0$, we can simply take $\delta=\frac{\epsilon}{M}>0$.
+\[|T(x)-T(y)|=|T(x-y)|\leq M|x-y|\] Given $\epsilon>0$, we can simply take $\delta=\frac{\epsilon}{M}>0$.
 
 \begin{remark} \hfill
 	\begin{enumerate}
 		\item Let $f:\mathbb{R}^n\rightarrow\mathbb{R}^m$. Then, \[f\text{ is continuous}\iff f^i\text{ is continuous for }i=1,\ldots,m\]
-			Sufficiency follows noting that $f^i=\pi^i\circ f$ and the fact that $\pi^i$ is continuous. Necessity is a simple exercise to prove.
+			Sufficiency follows by noting that $f^i=\pi^i\circ f$ and the fact that $\pi^i$ is continuous. Necessity is a simple exercise to prove.
 		\item Polynomials in $n$-variables are continuous, for example, the function \[1024(x^4)^5(x^2)^3(x^5)^{29}\] is continuous. The same holds for rational functions
 			\[R(x^1,\ldots,x^n)=\frac{P(x^1,\ldots,x^n)}{Q(x^1,\ldots,x^n)}\] where $P,Q$ are polynomials, continuous, where denominator is not equal to 0.
 	\end{enumerate}
@@ -180,7 +182,7 @@ Using this lemma we can prove $T$ to be continuous at $y\in\mathbb{R}^n$ as foll
 
 \begin{definition}
 	Let $f:\mathbb{R}^n\rightarrow\mathbb{R}^m$ (or replace $\mathbb{R}^n$ with $A$ open in $\mathbb{R}^n$), and let $a\in\mathbb{R}$. We say $f$ is \emph{differentiable}
-	at $a$ if we can find a linear transformation $\lambda:\mathbb{R}^n\rightarrow\mathbb{R}^m$ such that 
+	at $a\in\mathbb{R}^n$ if we can find a linear transformation $\lambda:\mathbb{R}^n\rightarrow\mathbb{R}^m$ such that 
 	\begin{equation}
 	\lim\limits_{h\to0}\frac{|f(a+h)-f(a)-\lambda(h)|}{|h|}=0
 	\end{equation} We call $\lambda:\mathbb{R}^n\rightarrow\mathbb{R}^m$ the \emph{derivative} of $f$ at $a$, and we denote
@@ -208,7 +210,7 @@ Using this lemma we can prove $T$ to be continuous at $y\in\mathbb{R}^n$ as foll
 				&=&\lim\limits_{t\to0}\frac{|\lambda(x)-\mu(x)|}{|x|}\\
 				&=&\frac{|\lambda(x)-\mu(x)|}{|x|}
 	\end{eqnarray*}
-	which is equal to 0 as \[\lim\limits_{t\to0}\frac{|\lambda(tx)-\mu(tx)|}{|tx|}=0\] hence \[|\lambda(x)-\mu(x)=0\] i.e., \[\lambda(x)=\mu(x)\]
+	which is equal to 0 as \[\lim\limits_{t\to0}\frac{|\lambda(tx)-\mu(tx)|}{|tx|}=0\] hence \[|\lambda(x)-\mu(x)|=0\] i.e., \[\lambda(x)=\mu(x)\]
 \end{proof}
 
 Note that for $h\in\mathbb{R}^m$, that \[\lambda(h)=Df(a)(h)\] so $Df(a)$ is a linear transformation, $Df(a):\mathbb{R}^n\rightarrow\mathbb{R}^m$. \\
@@ -219,30 +221,30 @@ $\mathbb{R}^m$.
 
 \begin{definition}
 	Let $f:\mathbb{R}^n\rightarrow\mathbb{R}$ (or replace $\mathbb{R}^n$ with any $A$ open in $\mathbb{R}^n$), and let $u\in\mathbb{R}^n$, where $u\neq0$. We define the
-	\emph{directional derivative} of $f$ at $a$ in the $u$-direction by
+	\emph{directional derivative} of $f$ at $a\in\mathbb{R}^n$ in the $u$-direction by
 	\[D_uf(a)=\lim\limits_{h\to0}\frac{f(a+hu)-f(a)}{h}\] (if it exists), where $h\in\mathbb{R}$. If $u=e_i$, then $D_uf(a)=D_if(a)$.
 \end{definition}
 
 \begin{theorem}
-	If $f:\mathbb{R}^n\rightarrow\mathbb{R}^m$ is differentiable at $a\in\mathbb{R}^n$  hen it is continuous at $a$.
+	If $f:\mathbb{R}^n\rightarrow\mathbb{R}^m$ is differentiable at $a\in\mathbb{R}^n$ then it is continuous at $a$.
 \end{theorem}
 
 \begin{proof}
-	We want to show that \[\lim\limits_{h\to0}|f(a+h)=f(a)|\] Hence we proceed
+	We want to show that \[\lim\limits_{h\to0}f(a+h)=f(a)\] Hence we proceed
 	\begin{eqnarray*}
-		\lim\limits_{h\to0}|f(a+h)-f(a)|&=&\lim\limits_{h\to0}|f(a+h)-f(a)-\lambda(h)|\\
+		\lim\limits_{h\to0}|f(a+h)-f(a)|&=&\lim\limits_{h\to0}|f(a+h)-f(a)-\lambda(h)+\lambda(h)|\\
 				&\leq&\lim\limits_{h\to0}|f(a+h)-f(a)-\lambda(h)|+\lim\limits_{h\to0}|\lambda(h)|\\
 				&\leq&\lim\limits_{h\to0}\frac{|f(a+h)-f(a)-\lambda(h)|}{|h|}|h|+\lim\limits_{h\to0}|\lambda(h)|\\
 				&=&0
 	\end{eqnarray*}
-	so \[\lim\limits_{h\to0}|f(a+h)-f(a)|\]
+	so \[\lim\limits_{h\to0}|f(a+h)-f(a)|=0\]
 \end{proof}
 
 \begin{remark}
 	If \[\lim\limits_{h\to0}\frac{|f(a+h)-f(a)-\lambda(h)|}{|h|}\] then letting $h=x-a$, we can write \[\lim\limits_{x\to a}\frac{|f(x)-f(a)-\lambda(x-a)|}{|x-a|}=0\]
 	If we let $\phi(x)=f(x)-f(a)-\lambda(x-a)$, then we have that $\phi:\mathbb{R}^n\rightarrow\mathbb{R}^m$ and we can rewrite
 	\[f(x)=f(a)+\lambda(x-a)+\phi(x)\] or, recalling that $\lambda=Df(a)$, \[f(x)=f(a)+Df(a)(x-a)+\phi(x)\] By definition, we have
-	\[\lim\limits_{x\to a}\frac{\phi(x)}{|x-a|}=0\]
+	\[\lim\limits_{x\to a}\frac{|\phi(x)|}{|x-a|}=0\]
 \end{remark}
 
 \end{document}
