--- a/algebraic topology/algebraic topology math0023.tex
+++ b/algebraic topology/algebraic topology math0023.tex
@@ -3,6 +3,7 @@
 \usepackage{amsmath}
 \usepackage{amsthm}
 \usepackage{amssymb}
+\usepackage{bbold}
 \usepackage{mathtools}
 \usepackage{centernot}
 \usepackage{tikz}
@@ -148,7 +149,7 @@ The following set \[x+U=\{x+u:u\in U\}\] is called the (left) coset of $U$ in $V
 \end{proposition}
 
 \begin{proof}
-	There exists a natural linear map \[\eta:V\rightarrow V/U\] given by \[\eta(x)=x+U\] Clearly this map is surjective so \[\dim(V/U)=\dim(\text{im}(\eta)\] Now,
+	There exists a natural linear map \[\eta:V\rightarrow V/U\] given by \[\eta(x)=x+U\] Clearly this map is surjective so \[\dim(V/U)=\dim(\text{im}(\eta))\] Now,
 	\begin{eqnarray*}
 		\ker(\eta)&=&\{x\in V:\eta(x)=U\}\\
 			&=&\{x\in V:x+U=U\}
@@ -167,7 +168,7 @@ Consider $\Delta^3$. The set $\{0,1,2,3\}$ represents the 'middle' of the tetrah
 It happens that $S^2$ (middle excluded) is the simplest simplicial model of the 2-sphere.
 
 \begin{eg}
-Consider \[H_k(S^2;\mathbb{F})\] Note that \[C_n(S^2)=0\text{ for }n\geq2\] as there are no 3-simplices, so we only have to worry about
+Consider \[H_k(S^2;\mathbb{F})\] Note that \[C_n(S^2)=0\text{ for }n\geq3\] as there are no 3-simplices, so we only have to worry about
 \[H_2(S^2;\mathbb{F}),H_1(S^2;\mathbb{F}),H_0(S^2;\mathbb{F})\] We proceed to calculate these from first principles. First note that $C_3(S^2)=0$. Now, (noting the order of these bases)
  $C_2(S^2)$ has basis
 \[[0,1,2],[0,1,3],[0,2,3],[1,2,3]\] $C_1(S^2)$ has basis \[[0,1],[0,2],[0,3],[1,2],[1,3],[2,3]\] and lastly $C_0(S^2)$ has basis \[[0],[1],[2],[3]\]
