fixed some typos

--- a/algebraic topology/algebraic topology math0023.tex
+++ b/algebraic topology/algebraic topology math0023.tex
@@ -215,7 +215,7 @@ If $X=(V_X,\mathcal{S}_X)$ is a simplicial complex, we define \[H_k(X,\mathbb{F}
 
 \subsection{Simplicial mapping}
 \begin{definition}[Simplicial mapping]
-	Let $X,Y$ be simplicial complexes, i.e., $X=(V_X,\mathcal{S}_X$ and $Y=(V_Y,\mathcal{S}_Y$). A \emph{simplicial mapping} $f:X\rightarrow Y$ is a mapping of vertex sets
+	Let $X,Y$ be simplicial complexes, i.e., $X=(V_X,\mathcal{S}_X)$ and $Y=(V_Y,\mathcal{S}_Y$). A \emph{simplicial mapping} $f:X\rightarrow Y$ is a mapping of vertex sets
 	$f:V_X\rightarrow V_Y$ such that \[\sigma\in\mathcal{S}_X\implies f(\sigma)\in\mathcal{S}_Y\]
 \end{definition}
 
