minor typo corrections in algebraic topology notes

--- a/algebraic topology/algebraic topology math0023.tex
+++ b/algebraic topology/algebraic topology math0023.tex
@@ -212,7 +212,7 @@ If $X=(V_X,\mathcal{S}_X)$, we have defined a chain complex \[C_*(X)=(C_r(X),\pa
 
 Given a chain complex \[C_*(C_r,\partial_r)_{r\geq0}\] we define its \emph{homology} $H_*(C_*)$ by \[H_k(C_*)=\ker(\partial_k)/\text{im}(\partial_{k+1})\]
 
-If $X=(V_X,\mathcal{S}_X)$ is a simplicial complex, we define \[H_k(X,\mathbb{F})=H_k(C_*(X;\mathbb{F}))\]
+If $X=(V_X,\mathcal{S}_X)$ is a simplicial complex, we define \[H_k(X;\mathbb{F})=H_k(C_*(X;\mathbb{F}))\]
 
 \subsection{Simplicial mapping}
 \begin{definition}[Simplicial mapping]
